[package]
name = "cpu_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
#serialport = { git = "https://github.com/LukaOber/serialport-rs", branch = "pr/34" }
serialport = { git = "https://github.com/dbalsom/serialport-rs", branch = "arduino-fix" }